--- a/Code/Project/Web Tuyen Sinh/CSS/style.css
+++ b/Code/Project/Web Tuyen Sinh/CSS/style.css
@@ -113,24 +113,24 @@ a{
     cursor: pointer;
 }
 .profile{
-    width: 18%; height: 25rem;
+    width: 16%; height: 20rem;
     display: flex; flex-direction: column;
     align-items: center; 
     gap: .5rem; padding: 1rem;
     background-color: white;
     border-radius: .8rem;
     position: absolute;
-    top: 10rem; right: 3rem;
+    top: 8rem; right: 3rem;
     z-index: 1000;
     display: none;
-    border: var(--border);
+    /* border: var(--border); */
 }
 .profile.active{
     display: flex; 
 }
 .image{
-    margin-top: 2rem;
-    width: 8rem; height: 8rem;
+    margin-top: 1.5rem;
+    width: 6rem; height: 6rem;
     border-radius: 4rem;
     /* border: var(--border); */
 }
@@ -138,7 +138,7 @@ a{
     width: 100%; height: 2rem;
     display: flex; 
     align-items: center; justify-content: center;
-    padding: 1.5rem; margin-bottom: 1rem;
+    padding: 1rem; margin-bottom: 1rem;
     border-radius: .5rem;
     background-color: var(--orange); color: white;
 }
@@ -148,19 +148,9 @@ a{
 
 /* content */
 
-.break-bar{
-    display: block;
-    width: 80%;
-    height: .2rem;
-    background-color: var(--black);
-    margin: 0 auto;
-    position: relative;
-    top: 10%;
-}
-
 .bg-banner{
     background-color: var(--light-white);
-    padding: 1.5rem;
+    padding-top: 8.5rem;
 }
 
 .banner{
@@ -220,8 +210,9 @@ a{
 .admission-slide-show{
     display: flex; flex-direction: column;
     align-items: center;
-    gap: 2rem; margin-top: 5rem;
+    gap: 1rem; margin-top: 5rem;
     width: 100%; height: 70rem;
+    position: relative;
 }
 
 .admission-slide-show > h1{
@@ -232,22 +223,25 @@ a{
 }
 
 .admission-slide-show > h3{
-    font-size: 3rem; padding-bottom: 2rem;
+    font-size: 3rem; padding-bottom: 1.5rem;
 }
 
 .stg-box{
     display: flex; flex-direction: column;
     flex-wrap: wrap;
-    overflow: hidden;
+    /* overflow: hidden; */
     align-items: center;
-    gap: 2rem; margin-top: 5rem;
+    gap: 2rem; margin-top: 5rem;    
     width: 70%; height: 70rem;
+    position: relative;
+    transition: transform 0.5s ease-in-out;
 }
 
 .slide-show{
     display: flex; flex-direction: row;
-    width: 100%; height: 70rem;
-    gap: 5%; flex-wrap: wrap;
+    width: 100%; height: 43rem;
+    gap: 4%; flex-wrap: wrap;
+    max-width: 441rem; 
 }
 .admission{
     width: 30%; height: 20rem;
@@ -255,11 +249,12 @@ a{
     align-items: center; justify-content: center;
     background-color: var(--white);
     border-radius: 1rem; border: var(--border);
+    margin-bottom: 2.5rem;
 }
 
 .admission h3,
 .admission h1{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     padding: 1rem;
 }
 
@@ -274,14 +269,85 @@ a{
 .admission:hover{
     border: .2rem solid #26de81;
 }
-
-.admission::before{
-    
+/* 
+.admission-slide-show .scroll-bar {
+    width: 70%; height: 2rem;
+    overflow: auto;
+    margin-bottom: 8rem;
 }
+
+.scroll-bar:hover .scrollbar-track {
+    height: .33rem;
+}
+
+.scroll-bar .scrollbar-track {
+    width: 100%; height: .24rem;
+    background-color: var(--grey);
+    position: relative;
+    display: flex; align-items: center;
+    border-radius: .48rem;
+}
+
+.scroll-bar .scrollbar-thumb {
+    width: 15%; height: 100%;
+    background-color: var(--main-color);
+    position: absolute;
+    cursor: grab;
+    border-radius: inherit;
+}
+
+.scroll-bar .scrollbar-thumb:active {
+    cursor: grabbing;
+    height: .67rem;
+    top: -.167rem;
+}
+
+.scroll-bar .scrollbar-thumb::after
+{
+    content: "";
+    position: absolute;
+    left: 0; right: 0;
+    top: -.83rem; bottom: -.83rem;
+} */
+
+.slide-btn{
+    position: absolute;
+    height: 4rem; width: 4rem;
+    background-color: var(--light-blue); color: white;
+    border-radius: 0.5rem;
+    font-size: 2.2rem;
+    border: .1rem solid var(--light-blue);
+    cursor: pointer;
+    z-index: 1000;
+}
+
+.admission-slide-show #prev-slide{
+    left: 10%;
+    top: 51%;
+}
+
+.admission-slide-show #next-slide{
+    right: 10%;
+    top: 51%;
+}
+
+.admission-slide-show .slide-btn:hover{
+    background-color: rgb(52, 52, 142);
+    border: none;
+}
+
+.hidden {
+    display: none;
+}
+
+/* .admission::before{
+    
+} */
 
 /* footer */
 
 footer{
+    margin-top: 10rem;
     position: relative;
     /*change the position of footer*/
     background-color: var(--light-white);
