--- a/Code/Project/Web Tuyen Sinh/CSS/style.css
+++ b/Code/Project/Web Tuyen Sinh/CSS/style.css
@@ -156,7 +156,7 @@ a{
 .banner{
     display: flex; flex-direction: column;
     align-items: center; justify-content: center;   
-    padding: 2rem; width: 60%; margin: .5% auto;
+    padding: 2rem 2rem 0 2rem; width: 60%; margin: .5% auto;
     border-radius: 1rem;
 }
 
@@ -215,15 +215,22 @@ a{
     position: relative;
 }
 
-.admission-slide-show > h1{
-    font-size: 2rem;
+.content-title{
+    display: flex; flex-direction: column;
+    align-items: center; justify-content: center;
+    gap: 1rem; margin-top: 2rem;
+    width: 100%;
+}
+ 
+.content-title > h1{
+    font-size: 1rem;
     border-top: .2rem solid var(--main-color);
     padding-top: 2rem;
     color: var(--main-color);
 }
 
-.admission-slide-show > h3{
-    font-size: 3rem; padding-bottom: 1.5rem;
+.content-title > h3{
+    font-size: 2rem; padding-bottom: 1.5rem;
 }
 
 .stg-box{
@@ -340,9 +347,46 @@ a{
     display: none;
 }
 
-/* .admission::before{
-    
-} */
+
+/* info2025 */
+
+.info25{
+    display: flex; flex-direction: row;
+    justify-content: center;
+    align-items: center; gap: 2.5rem;
+    width: 100%; height: 30rem;
+    background-color: var(--light-white);
+}
+.info25-box{
+    display: flex; flex-direction: column;
+    align-items: center; gap: 2.5rem;
+    width: 30%; height: 22rem;
+    background-color: var(--white);
+    border-radius: 1rem;
+    padding: 1rem;
+}
+.info25-img
+{
+    width: 94%; height: 10rem;
+    border-radius: 1rem;
+    background-color: var(--red);
+    display: flex; align-items: center;
+    justify-content: center;
+}
+.info25-content{
+    display: flex; flex-direction: column;
+    gap: 1rem; font-size:1rem;
+}
+.info25-content a{
+    font-size: 1rem;
+    display: flex; justify-content: flex-end;
+    align-items: flex-end;
+}
+.admission-content > .content-title{
+    background-color: var(--light-white);
+    padding-top: 3.5rem;
+}
+
 
 /* footer */
 
