--- a/Code/Project/Web Tuyen Sinh/CSS/style.css
+++ b/Code/Project/Web Tuyen Sinh/CSS/style.css
@@ -1,5 +1,5 @@
 /* font Koh Santepheap */
-@import url('https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
 :root{
     --main-color:#3867d6;
@@ -13,14 +13,18 @@
     --grey:#d1d8e0;
     --black:#4b6584;
     --white:#fff;
+    --aqua:rgb(221, 245, 253);
+    --dark-blue:#143884;
     --border:.25rem solid rgba(0, 0, 0);
 }
 
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Plus Jakarta Sans';
     margin: 0; padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    word-spacing: .15rem;
+    letter-spacing: .01rem;
 }
 
 /* header */
@@ -149,8 +153,8 @@ a{
 /* content */
 
 .bg-banner{
-    background-color: var(--light-white);
-    padding-top: 8.5rem;
+    background-color: var(--aqua);
+    padding-top: 8.5rem; padding-bottom: 6rem;
 }
 
 .banner{
@@ -198,7 +202,7 @@ a{
 
 .title-submit:hover{
     background-color: var(--white);
-    border: .2rem solid var(--main-color);
+    border: .2rem solid var(--dark-blue);
     padding: 1.3rem 2.8rem 1.3rem 2.8rem;
     a{
         color: var(--main-color);
@@ -206,6 +210,12 @@ a{
 }
 
 /* slide-show */
+
+.icon-display{
+    font-size: 2.2rem;
+    padding: 1rem; background-color: #4b66a1;
+    border-radius: 1rem; color: white;
+}
 
 .admission-slide-show{
     display: flex; flex-direction: column;
@@ -223,7 +233,7 @@ a{
 }
  
 .content-title > h1{
-    font-size: 1rem;
+    font-size: .8rem;
     border-top: .2rem solid var(--main-color);
     padding-top: 2rem;
     color: var(--main-color);
@@ -254,27 +264,32 @@ a{
     width: 30%; height: 20rem;
     display: flex; flex-direction: column;
     align-items: center; justify-content: center;
-    background-color: var(--white);
-    border-radius: 1rem; border: var(--border);
+    background-color: var(--aqua);
+    border-radius: 1rem; 
     margin-bottom: 2.5rem;
+    box-shadow: .1rem .3rem 1rem rgba(0, 0, 0, 0.1);
 }
 
-.admission h3,
-.admission h1{
+.admission h3{
     font-size: 1.1rem;
+    padding: 1rem;
+}
+.admission h1{
+    font-size: .9rem;
     padding: 1rem;
 }
 
 .link-page{
     margin-top: 2rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    font-style: italic;
 }
 .link-page :hover{
-    border-bottom: .2rem solid var(--main-color);
+    border-bottom: .2rem solid var(--dark-blue);
     padding-bottom: 1rem;
 }
 .admission:hover{
-    border: .2rem solid #26de81;
+    border: .18rem solid var(--dark-blue);
 }
 /* 
 .admission-slide-show .scroll-bar {
@@ -355,7 +370,8 @@ a{
     justify-content: center;
     align-items: center; gap: 2.5rem;
     width: 100%; height: 30rem;
-    background-color: var(--light-white);
+    background-color: var(--aqua);
+    margin-bottom: 7rem;
 }
 .info25-box{
     display: flex; flex-direction: column;
@@ -378,15 +394,79 @@ a{
     gap: 1rem; font-size:1rem;
 }
 .info25-content a{
-    font-size: 1rem;
+    font-size: 1rem; font-style: italic;
     display: flex; justify-content: flex-end;
     align-items: flex-end;
 }
+
+.info25-content a:hover{
+    text-decoration: underline;
+}
+
 .admission-content > .content-title{
-    background-color: var(--light-white);
+    background-color: var(--aqua);
     padding-top: 3.5rem;
 }
 
+/* admission-method */
+
+.admission-method{
+    display: flex; flex-direction: column;
+    align-items: center; gap: 2rem;
+    width: 100%; height: 30rem;
+    margin-top: 5rem;
+}
+.method-menu{
+    display: flex; flex-direction: row;
+}
+
+.method-title{
+    cursor: pointer;
+    width: 19rem; height: 2rem;
+    display: flex; align-items: center;
+    justify-content: center;
+    font-size: 1.1rem;
+}
+
+.method-title > i{
+    font-size: 1.5rem;
+    padding-right: .5rem;
+}
+
+.method-title.active{
+    color: var(--main-color);
+    padding-bottom: 1rem;
+    border-bottom: .25rem solid var(--main-color);
+    transition: all 0.2s ease;
+}
+
+.method-content{
+    display: flex; flex-direction: row;
+    margin-top: 4rem; gap: 5rem;
+    width: 84%;
+}
+
+.method-img{
+    width: 39rem; height: 25rem;
+}
+
+.method-review{
+    display: flex; flex-direction: column;
+    gap: 2rem;
+}
+
+.method-review > div{
+    display: flex; flex-direction: row;
+    gap: 1rem;
+}
+.method-review > div > i{
+    font-size: 1.3rem;
+    margin-top: .5rem;
+}
+
+.method-review > i > span{
+    font-size: 1rem;
+}
 
 /* footer */
 
@@ -394,7 +474,7 @@ footer{
     margin-top: 10rem;
     position: relative;
     /*change the position of footer*/
-    background-color: var(--light-white);
+    background-color: var(--aqua);
     text-align: left;
     font-size: .8rem; 
     padding: 1rem;
